@@ -1,4 +1,6 @@
 Version 1.5.7+svn:
+ * Graphics:
+   * Fixed drawing glitches in the listboxes.
  * Language and i18n:
    * updated translations: Slovak
  * Networking
